--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 The project aims to calculate the self-resonant frequency (SRF) of irregular solenoids.
 
+The details of the algorithm can be found in the paper W. Zhou, and S. Y. Huang, "An Accurate Model for Fast Calculating theResonant Frequency of an Irregular Solenoid", IEEE Transactions on Microwave Theory and Techniques.
+
 The main script is the file "SRF_calculation.m",
 "calculateB" is a function for calculating magnetic field with Biot-Savart Law.
